samples/_failures_safe/1761530453_322b3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7882032e.c: In function ‘main’:
./samples/SAFE/__tmp_7882032e.c:171:12: error: missing terminating " character
  171 |     printf("Type\t
      |            ^~~~~~~
./samples/SAFE/__tmp_7882032e.c:171:5: error: expected expression at end of input
  171 |     printf("Type\t
      |     ^~~~~~
./samples/SAFE/__tmp_7882032e.c:171:5: error: expected declaration or statement at end of input
